improve video controls

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         </div>
       </div>
       <div id="future">
-        <video src="./assets/back.mp4" autoplay loop></video>
+        <video autoplay loop controls>
+          <source src="./assets/back.mp4">
+        </video>
         <div id="ftext">
           <h1>think of future</h1>
           <button>Join The Movement</button>
