--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div id="future">
-        <video autoplay loop controls>
+        <video loop autoplay>
           <source src="./assets/back.mp4">
         </video>
         <div id="ftext">
